resources/httpbin.yaml
# Namespace: namespace-a
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-a
  labels:
    istio-injection: enabled
---
# Namespace: namespace-b
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-b
  labels:
    istio-injection: enabled
---
# Deployment and Service for namespace-a
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: namespace-a
  labels:
    app: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: a
  template:
    metadata:
      labels:
        version: a
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: namespace-a
  labels:
    app: httpbin
    version: a
spec:
  type: ClusterIP
  selector:
    app: httpbin
    version: a
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
# Deployment and Service for namespace-b
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: namespace-b
  labels:
    app: httpbin
    version: b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: b
  template:
    metadata:
      labels:
        app: httpbin
        version: b
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: namespace-b
  labels:
    app: httpbin
    version: b
spec:
  type: ClusterIP
  selector:
    app: httpbin
    version: b
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
